tests/baselines/reference/argumentsObjectIterator02_ES5.errors.txt
tests/cases/compiler/argumentsObjectIterator02_ES5.ts(2,26): error TS2552: Cannot find name 'Symbol'. Did you mean 'blah'?


==== tests/cases/compiler/argumentsObjectIterator02_ES5.ts (1 errors) ====
    function doubleAndReturnAsArray(x: number, y: number, z: number): [number, number, number] {
        let blah = arguments[Symbol.iterator];
                             ~~~~~~
!!! error TS2552: Cannot find name 'Symbol'. Did you mean 'blah'?
    
        let result = [];
        for (let arg of blah()) {
            result.push(arg + arg);
        }
        return <[any, any, any]>result;
    }
    
    